--- a/src/app/edit-employee/edit-employee.component.html
+++ b/src/app/edit-employee/edit-employee.component.html
@@ -1,1 +1,41 @@
-<p>edit-employee works!</p>
+<h2>Edit Employee</h2>
+<form [formGroup]="employeeForm" (ngSubmit)="updateEmployee()">
+  <div class="form-group">
+    <label for="name">Name:</label>
+    <input id="name" formControlName="name" type="text" class="form-control">
+    <div *ngIf="f['name'].touched && f['name'].invalid">
+      <small *ngIf="f['name'].errors?.['required']">Name is required.</small>
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="email">Email:</label>
+    <input id="email" formControlName="email" type="email" class="form-control">
+    <div *ngIf="f['email'].touched && f['email'].invalid">
+      <small *ngIf="f['email'].errors?.['required']">Email is required.</small>
+      <small *ngIf="f['email'].errors?.['email']">Invalid email format.</small>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="phone">Phone:</label>
+    <input id="phone" formControlName="phone" type="text" class="form-control">
+    <div *ngIf="f['phone'].touched && f['phone'].invalid">
+      <small *ngIf="f['phone'].errors?.['required']">Phone is required.</small>
+      <small *ngIf="f['phone'].errors?.['pattern']">Phone must be 11 digits and start with 010, 011, or 012.</small>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label for="address">Address:</label>
+    <textarea class="form-control" id="address" formControlName="address"></textarea>
+    <div *ngIf="f['address'].touched && f['address'].invalid">
+      <small *ngIf="f['address'].errors?.['required']">Address is required.</small>
+    </div>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" (click)="cancel()" class="btn btn-default">Cancel</button>
+    <button type="submit" (click)="updateEmployee()" class="btn btn-success" [disabled]="employeeForm.invalid || isSaving">Save</button>
+  </div>
+</form>
