--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    background: #f5f5f5 !important;
+    font-family: 'Varela Round', sans-serif !important;
+    font-size: 13px !important;
+}
+
+.table{
+    color: #566787 !important;
+}
+
+
+
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
