--- a/src/app/add-employee/add-employee.component.html
+++ b/src/app/add-employee/add-employee.component.html
@@ -1,4 +1,5 @@
-<h2>Add Employee</h2>
+<h2 mat-dialog-title>Add Employee</h2>
+<mat-dialog-content>
           <form [formGroup]="employeeForm" (ngSubmit)="save()">
           <div class="form-group">
             <label for="name">Name:</label>
@@ -31,12 +32,13 @@
               <small *ngIf="f['address'].errors?.['required']">Address is required.</small>
             </div>
           </div>
+          
           <div class="modal-footer">
             <input type="button" (click)="close()" class="btn btn-default" value="Cancel">
 
             <button type="submit" class="btn btn-success" [disabled]="employeeForm.invalid || isSaving">Add</button>
           </div>
         </form>
-
+      </mat-dialog-content>
 
     
