--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -183,3 +183,31 @@ table.table .avatar {
 .material-icons{
 cursor: pointer;
 }
+.btn.btn-danger:disabled {
+    cursor: not-allowed;
+    opacity: 0.6; 
+}
+
+
+.custom-dialog-container {
+    border-radius: 8px; /* Rounded corners */
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Shadow for depth */
+    background-color: #f9f9f9; /* Background color */
+    padding: 20px; /* Padding inside the dialog */
+}
+
+/* Optional: Customize header, content, and actions */
+.custom-dialog-container .mat-dialog-title {
+    background-color: #2196F3; /* Example header background color */
+    color: white; /* Example header text color */
+    padding: 16px; /* Padding inside the header */
+}
+
+.custom-dialog-container .mat-dialog-content {
+    padding: 20px; /* Padding inside the content */
+}
+
+.custom-dialog-container .mat-dialog-actions {
+    background-color: #f1f1f1; /* Example footer background color */
+    padding: 8px; /* Padding inside the footer */
+}
